k8s/mydb_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mydb
  labels:
    app: mydb
spec:
  selector:
    app: mydb
  ports:
  - port: 3306
    #protocol: TCP
    #targetPort: 3306
  type: ClusterIP
