k8s/myhttpd_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: myhttpd
  labels:
    app: myhttpd
  namespace: default
spec:
  selector:
    app: myhttpd
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
